--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
 
         <!-- Sökfält och knappar -->
         <div class="input-button-container">
-            <input type="text" id="searchInput" placeholder="Ange ingrediens & tryck Enter...">
+            <input type="text" id="searchInput" placeholder="Skriv ingrediens & tryck Enter...">
             <button onclick="addTagFromButton()">Lägg till</button> <!-- Ny knapp för att lägga till taggar -->
            <!-- <button onclick="performSearch()">Sök</button> -->
         </div>
