--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
         <div class="input-button-container">
             <input type="text" id="searchInput" placeholder="Skriv ingrediens & tryck Enter...">
             <button onclick="addTagFromButton()" class="add-button">
-                <img src="images/testlogga.png
+                <img src="images/knifeforksign.jpg
                 " alt="Add" />
             </button> <!-- Ny knapp för att lägga till taggar -->
             <!-- <button onclick="performSearch()">Sök</button> -->
