--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Lägg till denna länk i din head-tagg -->
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
 
 
     <style>
@@ -13,7 +13,7 @@
         html {
             height: 100%;
             margin: 0;
-            font-family: 'Indie Flower', cursive;
+            font-family: 'Exo 2', cursive;
             padding-bottom: 100px;
             /* Eller höjden på din footer */
         }
@@ -446,7 +446,7 @@
         /* Stiljusteringar för textetiketterna för slidern */
         .search-mode-label {
             display: block;
-            font-family: 'Indie Flower', cursive;
+            font-family: 'Exo 2', cursive;
             color: white;
             background-color: rgba(0, 0, 0, 0.7);
             text-align: center;
@@ -530,7 +530,7 @@
             /* Storlek på texten */
             transition: background-color 0.3s;
             /* Smidig övergång för bakgrundsfärg */
-            font-family: 'Indie Flower', cursive;
+            font-family: 'Exo 2', cursive;
             /* Din huvudfont */
         }
 
@@ -592,7 +592,7 @@
 
         /* Stil för placeholder-texten */
         #searchInput::placeholder {
-            font-family: 'Indie Flower', cursive;
+            font-family: 'Exo 2', cursive;
             /* Eller det typsnitt du använder på resten av din sida */
             font-size: 18px;
             /* Eller den storlek du vill ha */
