--- a/index.html
+++ b/index.html
@@ -1068,8 +1068,8 @@
     <div class="footer-banner">
         <p class="copyright">&copy; 2023. All rights reserved.</p>
         <div class="footer-links">
-            <a href="omoss.html">Om Oss</a>
-            <a href="tipsaoss.html">Tipsa Oss</a>
+            <a href="omoss.html">Om</a>
+            <a href="tipsaoss.html">Tipsa</a>
         </div>
     </div>
 </body>
