--- a/omoss.html
+++ b/omoss.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <title>Om Oss - Tallriken</title>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 
