--- a/index.html
+++ b/index.html
@@ -9,6 +9,161 @@
 
 
     <style>
+        .nav {
+            color: white;
+        }
+
+        .nav__trigger-finger {
+            position: fixed;
+            top: 0;
+            right: 0;
+            z-index: 10;
+            display: flex;
+            align-items: center;
+            width: 15px;
+            height: 10px;
+            margin: 40px;
+            color: hotpink;
+        }
+
+        .nav__trigger-finger::before {
+            content: "";
+            position: absolute;
+            top: -5px;
+            left: -5px;
+            bottom: -5px;
+            right: -5px;
+            background: hotpink;
+            opacity: 0;
+            z-index: -1;
+            transition: opacity 0.3s cubic-bezier(0.75, 0, 0.25, 1);
+        }
+
+        .nav__trigger-finger span {
+            display: block;
+            width: 100%;
+            height: 2px;
+            transition: transform 1s cubic-bezier(0.75, 0, 0.25, 1);
+            background: currentColor;
+        }
+
+        .nav__trigger-finger span::before,
+        .nav__trigger-finger span::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            right: 0;
+            display: block;
+            height: 2px;
+            background: currentColor;
+            transition: transform 0.4s cubic-bezier(0.75, 0, 0.25, 1), top 0.4s 0.4s cubic-bezier(0.75, 0, 0.25, 1), background 0.2s cubic-bezier(0.75, 0, 0.25, 1);
+        }
+
+        .nav__trigger-finger span::before {
+            top: 0;
+        }
+
+        .nav__trigger-finger span::after {
+            top: calc(100% - 2px);
+        }
+
+        .nav__trigger-input,
+        .nav__submenu-trigger-input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+            appearance: none;
+            position: fixed;
+        }
+
+        .nav__trigger-input:focus+label {
+            color: white;
+        }
+
+        .nav__trigger-input:focus+label::before {
+            opacity: 1;
+        }
+
+        .nav__trigger-input:checked+label {
+            height: 10px;
+            color: white;
+        }
+
+        .nav__trigger-input:checked+label span {
+            transform: rotate(45deg);
+        }
+
+        .nav__trigger-input:checked+label span::before,
+        .nav__trigger-input:checked+label span::after {
+            top: calc(50% - 1px);
+            transition: transform 0.4s 0.4s cubic-bezier(0.75, 0, 0.25, 1), top 0.4s cubic-bezier(0.75, 0, 0.25, 1), background 0.2s cubic-bezier(0.75, 0, 0.25, 1);
+        }
+
+        .nav__trigger-input:checked+label span::after {
+            transform: rotate(90deg);
+        }
+
+        .nav__trigger-input:checked~ul {
+            z-index: 9;
+            transform: none;
+            transition: 0.5s cubic-bezier(0.75, 0, 0.25, 1);
+        }
+
+        .nav__list {
+            position: fixed;
+            overflow-y: scroll;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            z-index: -1;
+            background: hotpink;
+            font-size: 4rem;
+            padding: 40px;
+            transform: translate(100vw) rotate(45deg);
+            transition: 0.2s cubic-bezier(0.75, 0, 0.25, 1);
+        }
+
+        .nav__item {
+            list-style: none;
+        }
+
+        .nav__item+.nav__item {
+            margin-top: 20px;
+        }
+
+        .nav__submenu-trigger-input:checked+label::after {
+            transform: translateY(10px);
+        }
+
+        .nav__submenu-trigger-input:checked~ul {
+            display: block;
+        }
+
+        .nav__submenu-trigger-input:focus+label::after {
+            transform: translateY(5px);
+        }
+
+        .nav__submenu-trigger-finger::after {
+            content: "";
+            display: inline-block;
+            border: 10px solid transparent;
+            border-top-color: white;
+            transition: 0.4s cubic-bezier(0.75, 0, 0.25, 1);
+        }
+
+        .nav__link {
+            text-decoration: none;
+            color: inherit;
+        }
+
+        .nav__list-child {
+            display: none;
+            font-size: 2rem;
+            margin-top: 10px;
+            padding-left: 2rem;
+        }
+
         body,
         html {
             height: 100%;
@@ -612,6 +767,60 @@
 </head>
 
 <body>
+    <nav class="nav">
+        <input class="nav__trigger-input" type="checkbox" id="trigger" aria-label="open the navigation" />
+        <label class="nav__trigger-finger" for="trigger">
+            <span></span>
+        </label>
+        <ul class="nav__list">
+            <li class="nav__item">
+                <a href="#hoi" class="nav__link">
+                    <span class="nav__text">
+                        Work
+                    </span>
+                </a>
+            </li>
+            <li class="nav__item">
+                <a href="#hoi" class="nav__link">
+                    <span class="nav__text">
+                        About
+                    </span>
+                </a>
+                <input class="nav__submenu-trigger-input" type="checkbox" id="submenu-trigger" />
+                <label class="nav__submenu-trigger-finger" for="submenu-trigger"></label>
+                <ul class="nav__list-child">
+                    <li class="nav__item">
+                        <a href="#hoi" class="nav__link">
+                            <span class="nav__text">
+                                About me
+                            </span>
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#hoi" class="nav__link">
+                            <span class="nav__text">
+                                About meerkats
+                            </span>
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li class="nav__item">
+                <a href="#hoi" class="nav__link">
+                    <span class="nav__text">
+                        Blog
+                    </span>
+                </a>
+            </li>
+            <li class="nav__item">
+                <a href="#hoi" class="nav__link">
+                    <span class="nav__text">
+                        Contact
+                    </span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 
     <a href="index.html" class="logo-link">
         <img src="images/testlogga2.png" alt="Logga" />
