ändrar färg på hamburger menyn

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <style>
         .nav {
-            color: white;
+            color: rgb(0, 0, 0);
         }
 
         .nav__trigger-finger {
@@ -23,7 +23,7 @@
             width: 15px;
             height: 10px;
             margin: 40px;
-            color: hotpink;
+            color: rgb(255, 230, 0);
         }
 
         .nav__trigger-finger::before {
@@ -33,7 +33,7 @@
             left: -5px;
             bottom: -5px;
             right: -5px;
-            background: hotpink;
+            background: rgb(255, 230, 0);
             opacity: 0;
             z-index: -1;
             transition: opacity 0.3s cubic-bezier(0.75, 0, 0.25, 1);
