--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         }
 
         .nav__trigger-input:focus+label {
-            color: white;
+            color: rgb(0, 0, 0);
         }
 
         .nav__trigger-input:focus+label::before {
@@ -86,7 +86,7 @@
 
         .nav__trigger-input:checked+label {
             height: 10px;
-            color: white;
+            color: rgb(0, 0, 0);
         }
 
         .nav__trigger-input:checked+label span {
@@ -117,7 +117,7 @@
             bottom: 0;
             right: 0;
             z-index: -1;
-            background: hotpink;
+            background: rgb(255, 230, 0);
             font-size: 4rem;
             padding: 40px;
             transform: translate(100vw) rotate(45deg);
@@ -148,7 +148,7 @@
             content: "";
             display: inline-block;
             border: 10px solid transparent;
-            border-top-color: white;
+            border-top-color: rgb(0, 0, 0);
             transition: 0.4s cubic-bezier(0.75, 0, 0.25, 1);
         }
 
