ändrar z-index för att menyn ska hamna framför sökfältet

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <style>
         .nav {
             color: rgb(0, 0, 0);
+            z-index: 3000;  /* Sätt ett högt värde här */
         }
 
         .nav__trigger-finger {
