försöker fortf lägga menyn framför sökfält när den klickas fram samt på samma sätt ändra z-index så sökresultat visas framför sökfält

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             position: fixed;
             top: 0;
             right: 0;
-            z-index: 10;
+            z-index: 3100;
             display: flex;
             align-items: center;
             width: 15px;
@@ -117,7 +117,7 @@
             left: 0;
             bottom: 0;
             right: 0;
-            z-index: -1;
+            z-index: 2200;
             background: rgb(255, 230, 0);
             font-size: 4rem;
             padding: 40px;
@@ -273,6 +273,7 @@
             margin-top: 5%;
             padding-bottom: 20px;
             overflow: auto;
+            z-index: 2100; /* högre än sökfältets z-index */
         }
 
         .matratt {
