--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
             background: rgb(255, 230, 0);
             font-size: 4rem;
             padding: 40px;
-            transform: translate(100vw) rotate(45deg);
-            transition: 0.2s cubic-bezier(0.75, 0, 0.25, 1);
+            transform: translateX(100%); /*translate(100vw) rotate (45deg); */
+            transition: 0.3s cubic-bezier(0.75, 0, 0.25, 1);
         }
 
         .nav__item {
