ändrar tillbaka till föregående

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             background: rgb(255, 230, 0);
             font-size: 4rem;
             padding: 40px;
-            transform: translateX(100%) rotate (45deg); /*translate(100vw) rotate (45deg); */
+            transform: translateX(100%); /*translate(100vw) rotate (45deg); */
             transition: 0.3s cubic-bezier(0.75, 0, 0.25, 1);
         }
 
