ändrar tillbaka till föregående

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             bottom: -5px;
             right: -5px;
             background: rgb(0, 0, 0);
-            opacity: 50;
+            opacity: 0;
             z-index: 3101;
             transition: opacity 0.3s cubic-bezier(0.75, 0, 0.25, 1);
         }
@@ -795,14 +795,14 @@
                     <li class="nav__item">
                         <a href="#hoi" class="nav__link">
                             <span class="nav__text">
-                                About me
+                                Om oss
                             </span>
                         </a>
                     </li>
                     <li class="nav__item">
                         <a href="#hoi" class="nav__link">
                             <span class="nav__text">
-                                About meerkats
+                                Tipsa Oss
                             </span>
                         </a>
                     </li>
@@ -811,14 +811,14 @@
             <li class="nav__item">
                 <a href="#hoi" class="nav__link">
                     <span class="nav__text">
-                        Blog
+                        Blogg
                     </span>
                 </a>
             </li>
             <li class="nav__item">
                 <a href="#hoi" class="nav__link">
                     <span class="nav__text">
-                        Contact
+                        Kontakt
                     </span>
                 </a>
             </li>
