--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             left: 0;
             bottom: 0;
             right: 0;
-            z-index: 2200;
+            z-index: 3100;
             background: rgb(255, 230, 0);
             font-size: 4rem;
             padding: 40px;
@@ -162,7 +162,7 @@
             display: none;
             font-size: 2rem;
             margin-top: 10px;
-            z-index: 2150;
+            z-index: 3100;
             padding-left: 2rem;
         }
 
@@ -786,7 +786,7 @@
             <li class="nav__item">
                 <a href="#hoi" class="nav__link">
                     <span class="nav__text">
-                        About
+                        Om
                     </span>
                 </a>
                 <input class="nav__submenu-trigger-input" type="checkbox" id="submenu-trigger" />
@@ -814,7 +814,32 @@
                         Blogg
                     </span>
                 </a>
+                <input class="nav__submenu-trigger-input" type="checkbox" id="submenu-trigger" />
+                <label class="nav__submenu-trigger-finger" for="submenu-trigger"></label>
+                <ul class="nav__list-child">
+                    <li class="nav__item">
+                        <a href="#hoi" class="nav__link">
+                            <span class="nav__text">
+                                Knivar & Kastruller
+                            </span>
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#hoi" class="nav__link">
+                            <span class="nav__text">
+                                Inredning
+                            </span>
+                        </a>
+                    </li>
+                </ul>
             </li>
+            <!-- <li class="nav__item">
+                <a href="#hoi" class="nav__link">
+                    <span class="nav__text">
+                        Blogg
+                    </span>
+                </a>
+            </li> -->
             <li class="nav__item">
                 <a href="#hoi" class="nav__link">
                     <span class="nav__text">
