--- a/index.html
+++ b/index.html
@@ -1232,71 +1232,23 @@
             const searchContainer = document.querySelector('.search-container');
             let lastScrollTop = 0;
 
-            window.addEventListener("scroll", function () {
-                console.log("Scroll event detected!"); // Denna rad ska logga i konsolen vid scrollning
+            window.addEventListener('scroll', function () {
                 var currentScroll = window.pageYOffset || document.documentElement.scrollTop;
-                var dataContainer = document.getElementById('data-container');
-                var paginationControls = document.getElementById('pagination-controls');
-                var windowHeight = window.innerHeight;
-                var bodyHeight = document.body.offsetHeight;
-                var searchContainerHeight = searchContainer.offsetHeight;
 
-                // Hantera visning av sökfält och knappar på mobila enheter
-                if (window.innerWidth <= 480) { // Använd 480px som brytpunkt för mobil enhet
-                    if (currentScroll > lastScrollTop) {
-                        // Scroll nedåt, dölj sökfältet och knapparna
-                        searchContainer.style.opacity = '0';
-                        searchContainer.style.visibility = 'hidden';
-                    } else {
-                        // Scroll uppåt, visa sökfältet och knapparna
-                        searchContainer.style.opacity = '1';
-                        searchContainer.style.visibility = 'visible';
-                    }
-                } else {
-                    // För icke-mobila enheter, hantera sökfält och knappar som vanligt
-                    if (dataContainer && dataContainer.innerHTML.trim() !== '') {
-                        if (currentScroll > lastScrollTop) {
-                            // Scroll nedåt genom sökresultaten
-                            searchContainer.classList.add('hidden-search');
-                            backgroundContainer.classList.add('blur-background');
-                            dataContainer.classList
-                                .remove('initial');
-                            dataContainer.classList.add('search-active');
-                            // Justera padding-top när användaren scrollar ner
-                            dataContainer.style.paddingTop = '0px';
-                        } else {
-                            // Scroll uppåt till toppen av sökresultatsidan
-                            searchContainer.classList.remove('hidden-search');
-                            backgroundContainer.classList.remove('blur-background');
-                            dataContainer.classList.add('initial');
-                            dataContainer.classList.remove('search-active');
-                            // Justera padding-top när användaren scrollar uppåt
-                            dataContainer.style.paddingTop = searchContainerHeight + 'px';
-                        }
-                    } else {
-                        // På startsidan, ingen suddighet eller döljning när man scrollar
+                if (window.innerWidth <= 480) { // Endast för mobila enheter
+                    if (currentScroll > lastScrollTop && currentScroll > 100) {
+                        // Användaren scrollar neråt och är inte nära toppen
+                        searchContainer.classList.add('hidden-search');
+                    } else if (currentScroll < lastScrollTop && currentScroll <= 100) {
+                        // Användaren scrollar uppåt och är nära toppen
                         searchContainer.classList.remove('hidden-search');
-                        backgroundContainer.classList.remove('blur-background');
-                        // Säkerställ att padding-top är korrekt även på startsidan
-                        if (currentScroll <= searchContainerHeight) {
-                            dataContainer.style.paddingTop = searchContainerHeight + 'px';
-                        } else {
-                            dataContainer.style.paddingTop = '0px';
-                        }
                     }
                 }
 
-
-                lastScrollTop = currentScroll <= 0 ? 0 : currentScroll;
-
-                // Hantera pagineringens synlighet
-                if (windowHeight + currentScroll >= bodyHeight) {
-                    paginationControls.style.display = 'block';
-                } else {
-                    paginationControls.style.display = 'none';
-                }
+                lastScrollTop = currentScroll <= 0 ? 0 : currentScroll; // Uppdaterar senaste scrollpositionen
             }, false);
         });
+
 
 
 
