lägger till console i listerner scroll

--- a/index.html
+++ b/index.html
@@ -1233,13 +1233,16 @@
 
             window.addEventListener('scroll', function () {
                 var currentScroll = window.pageYOffset || document.documentElement.scrollTop;
+                console.log("Scroll position: ", currentScroll); // Lägger till detta
 
                 if (currentScroll > lastScrollTop) {
                     // Användaren scrollar neråt
                     searchContainer.classList.add('hidden-search');
+                    console.log("Hiding search container");
                 } else {
                     // Användaren scrollar uppåt
                     searchContainer.classList.remove('hidden-search');
+                    console.log("Showing search container");
                 }
 
                 lastScrollTop = currentScroll <= 0 ? 0 : currentScroll;
