--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('/tallriken/images/matbakgrund1.jpeg');
+            background-image: url('/tallriken/images/matbakgrund3.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
